--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "class-validator": "^0.14.0",
     "prisma": "^5.6.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "stripe": "^14.7.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
